--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -8,7 +8,7 @@
 theme: mr robot # 1950s forest coffee ocean mr robot dark minimal mr robot rose strawberry
 day_night: true
 font: rose # minimal classic rose mr robot native
-font_size: L
+font_size: M
 
 # SEO
 
